--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,31 @@
 @media screen and (max-width: 768px) {
     #center {
-        min-height: 60%;
-        min-width: 80%;
-
+        min-width: 90%;
+        max-height: 25%;
     }
 
 
-    /* width: 100%;
-    height: auto;
-    min-height: 50%;
-    padding: 20px 10px;
-    margin: 0;
-    border-radius: 0;
-    */
-
     #countdown-container {
-         /* Stack items vertically on mobile */
         align-items: center;
     }
 
     .number {
-        font-size: 50px;  /* Reduced from 20vw to avoid overflow */
-        color: black;
+        font-size: 14.5vw !important;
+    }
+
+    .label{
+        font-size: 3.5vw !important;
+    }
+
+    #bar{
+        min-width: 75vw !important;
+    }
+
+    .btn{
+        font-size: 4vw !important;
+    }
+    #infoRight{
+        width: 95% !important;
     }
 }
 
@@ -82,7 +86,7 @@ html,body{
     top: 8%;
     transform: translate(-50%,-50%);
     width: 25%;
-    min-width: 200px;
+    min-width: 15vw;
     min-height: 50px;
     height: 7%;
     display: flex;
