--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,9 @@
         backdrop-filter: none !important;
         -webkit-backdrop-filter: none !important;
     }
+    #infoP {
+        padding: 0 1em !important;
+    }
 }
 
 
@@ -331,7 +334,7 @@ html, body {
 
 #infoP {
     filter: drop-shadow(0 6px 10px rgba(0, 0, 0, 0.25));
-    padding: 0 1em;
+    padding: 0 8em;
 }
 
 a {
