--- a/styles.css
+++ b/styles.css
@@ -146,8 +146,7 @@ html, body {
 .number {
     color: white;
     font-size: 6.5vw;
-    font-family: 'SF Mono', SFMono-Regular, ui-monospace,
-    'DejaVu Sans Mono', Menlo, Consolas, monospace;
+    font-family: 'SF Mono', 'Azeret Mono', 'JetBrains Mono', 'Space Mono', 'Fira Mono', 'Roboto Mono', 'IBM Plex Mono', SFMono-Regular, ui-monospace, monospace;
     font-weight: 900;
     filter: drop-shadow(0 6px 10px rgba(0, 0, 0, 0.25));
     cursor: default;
@@ -172,8 +171,7 @@ html, body {
 .colon {
     color: white;
     font-size: 6.2vw;
-    font-family: 'SF Mono', SFMono-Regular, ui-monospace,
-    'DejaVu Sans Mono', Menlo, Consolas, monospace;
+    font-family: "system-ui", "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif, "System Default", sans-serif;
     font-weight: 900;
     filter: drop-shadow(0 6px 10px rgba(0, 0, 0, 0.25));
     cursor: default;
@@ -259,7 +257,7 @@ html, body {
 
 @keyframes gradientShift {
     0% {
-        background-position: 0% 50%;
+        background-position: 0 50%;
     }
     100% {
         background-position: 100% 50%;
@@ -284,10 +282,7 @@ html, body {
     border: 1px solid rgb(183, 183, 183);
     backdrop-filter: blur(1.5vw);
     -webkit-backdrop-filter: blur(1.5vw);
-    padding-top: 1em;
-    padding-bottom: 1em;
-    padding-left: 2em;
-    padding-right: 2em;
+    padding: 1em 2em;
     animation: gradientShift 10s linear infinite, glowPulse 1.5s ease-in-out infinite;
     font-size: 1.2em;
     text-wrap: nowrap;
