--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* test */
 @media screen and (max-width: 768px) {
     #center {
         min-width: 90%;
@@ -362,3 +361,52 @@ a {
     font-weight: 800;
     font-size: 1.2em;
 }
+
+#patronTitle{
+    margin-top: -0.5vw;
+    font-size: 5vw;
+    font-family: 'SF Mono', 'Azeret Mono', 'JetBrains Mono', 'Space Mono', 'Fira Mono', 'Roboto Mono', 'IBM Plex Mono', SFMono-Regular, ui-monospace, monospace;
+    font-weight: 900;
+    filter: drop-shadow(0 6px 10px rgba(0, 0, 0, 0.25));
+    cursor: default;
+    line-height: 1;
+    background-color: transparent;
+    overflow: visible;
+    transform: translateZ(0);
+}
+
+#patronCenter {
+    background-color: rgba(229, 229, 229, 0.3);
+    border-radius: 2.2em;
+    color: white;
+    position: absolute;
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%, 50%);
+    width: 55%;
+    height: 40%;
+    box-shadow: 0 .8em 1.5em rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#patronLists{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: -2vw;
+}
+
+.list{
+    filter: drop-shadow(0 6px 10px rgba(0, 0, 0, 0.25));
+    font-size: 1.5vw;
+    cursor: default;
+    line-height: 1;
+    background-color: transparent;
+    overflow: visible;
+    transform: translateZ(0);
+    margin: 1vw;
+}
+
