--- a/styles.css
+++ b/styles.css
@@ -33,15 +33,33 @@
         font-size: 7vw !important;
     }
 
+    .larger{
+        font-size: 5vw !important;
+    }
+
     #screen-dimmer {
         background-color: transparent !important;
         pointer-events: none !important;
         backdrop-filter: none !important;
         -webkit-backdrop-filter: none !important;
     }
-    #infoP {
+    #info {
         padding: 0 1em !important;
     }
+
+    #patronTitle{
+            font-size: 7vw !important;
+    }
+
+    #patronCenter {
+        min-width: 90%;
+        max-height: 25%;
+    }
+
+    .list{
+        font-size: 3.5vw !important;
+    }
+
 }
 
 
@@ -309,6 +327,10 @@ html, body {
 }
 
 #infoRight {
+    -moz-user-select: auto;
+    -webkit-user-select: auto;
+    user-select: auto;
+    cursor: auto;
     color: white;
     background-color: rgba(229, 229, 229, 0.3);
     width: 50%;
@@ -390,6 +412,10 @@ a {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    -moz-user-select: auto;
+    -webkit-user-select: auto;
+    user-select: auto;
+    cursor: auto;
 }
 
 #patronLists{
