--- a/styles.css
+++ b/styles.css
@@ -442,3 +442,47 @@ a {
     margin: 1vw;
 }
 
+#centerTickets{
+    background-color: rgba(229, 229, 229, 0.3);
+    border-radius: 2.2em;
+    position: absolute;
+    left: 50%;
+    bottom: 50%;
+    transform: translate(-50%, 50%);
+    width: 55%;
+    height: 40%;
+    box-shadow: 0 .8em 1.5em rgba(0, 0, 0, 0.25);
+    display: block;
+}
+
+#buyLabel{
+    display: block;
+    font-size: 3em;
+    color: white;
+    font-weight: 900;
+}
+
+#buyBtn{
+    position: absolute;
+    left: 50%;
+    top: 70%;
+    transform: translate(-50%, -50%) translate3d(0, 0, 0);
+    background: linear-gradient(90deg, rgba(83, 119, 220, 0.6), rgba(255, 44, 230, 0.6), rgba(255, 85, 85, 0.6), rgba(180, 67, 255, 0.6), rgba(83, 119, 220, 0.6), rgba(255, 44, 230, 0.6));
+    background-size: 500% 100%;
+    border: 1px solid rgb(183, 183, 183);
+    backdrop-filter: blur(1.5vw);
+    -webkit-backdrop-filter: blur(1.5vw);
+    padding: 1em 2em;
+    animation: gradientShift 10s linear infinite;
+    font-size: 1.2em;
+    text-wrap: nowrap;
+    border-radius: 1.2em;
+    color: white;
+    font-weight: 800;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+    background-clip: padding-box;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    transform-origin: center center;
+}
