--- a/styles.css
+++ b/styles.css
@@ -321,6 +321,10 @@ html, body {
     scale: 1.1;
 }
 
+.mainBtn.no-glow {
+    animation: gradientShift 10s linear infinite;
+}
+
 .glass {
     backdrop-filter: blur(1.5em);
     -webkit-backdrop-filter: blur(1.5em);
@@ -445,6 +449,7 @@ a {
 #centerTickets{
     background-color: rgba(229, 229, 229, 0.3);
     border-radius: 2.2em;
+    color: white;
     position: absolute;
     left: 50%;
     bottom: 50%;
@@ -452,7 +457,14 @@ a {
     width: 55%;
     height: 40%;
     box-shadow: 0 .8em 1.5em rgba(0, 0, 0, 0.25);
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    -moz-user-select: auto;
+    -webkit-user-select: auto;
+    user-select: auto;
+    cursor: auto;
 }
 
 #buyLabel{
@@ -463,10 +475,6 @@ a {
 }
 
 #buyBtn{
-    position: absolute;
-    left: 50%;
-    top: 70%;
-    transform: translate(-50%, -50%) translate3d(0, 0, 0);
     background: linear-gradient(90deg, rgba(83, 119, 220, 0.6), rgba(255, 44, 230, 0.6), rgba(255, 85, 85, 0.6), rgba(180, 67, 255, 0.6), rgba(83, 119, 220, 0.6), rgba(255, 44, 230, 0.6));
     background-size: 500% 100%;
     border: 1px solid rgb(183, 183, 183);
@@ -484,5 +492,24 @@ a {
     background-clip: padding-box;
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
-    transform-origin: center center;
 }
+
+#centerForm{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: -2vw;
+}
+
+#form{
+    display:block;
+}
+
+#enter{
+    margin-top: 4vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
