--- a/styles.css
+++ b/styles.css
@@ -323,6 +323,8 @@ html, body {
 
 .mainBtn.no-glow {
     animation: gradientShift 10s linear infinite;
+    background: grey;
+
 }
 
 .glass {
@@ -472,6 +474,7 @@ a {
     font-size: 3em;
     color: white;
     font-weight: 900;
+    margin-top: 2vw;
 }
 
 #buyBtn{
@@ -480,7 +483,7 @@ a {
     border: 1px solid rgb(183, 183, 183);
     backdrop-filter: blur(1.5vw);
     -webkit-backdrop-filter: blur(1.5vw);
-    padding: 1em 2em;
+    padding: 1vw 2em;
     animation: gradientShift 10s linear infinite;
     font-size: 1.2em;
     text-wrap: nowrap;
@@ -492,13 +495,14 @@ a {
     background-clip: padding-box;
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
+    height: 100%;
 }
 
 #centerForm{
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    margin-top: -2vw;
+    margin-top: -1vw;
 }
 
 #form{
@@ -506,10 +510,16 @@ a {
 }
 
 #enter{
-    margin-top: 4vw;
+    margin-top: 2vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+#ticketType{
+    margin-right: 1vw;
+    font-size: 1.2vw;
+    border: 1vw;
 }
 
