--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,19 @@
         max-height: 25%;
     }
 
+    #buyLabel{
+        font-size: 2em !important;
+    }
+
+    #ticketInfoRight{
+        height: 80% !important;
+    }
+
+    #centerTickets {
+        min-width: 80%;
+        max-height: 25%;
+    }
+
 
     #countdown-container {
         align-items: center;
@@ -25,7 +38,7 @@
         font-size: 4vw !important;
     }
 
-    #infoRight {
+    .infoRight {
         width: 95% !important;
         height: 55% !important;
     }
@@ -334,7 +347,7 @@ html, body {
     box-shadow: 0 .8em 1.5em rgba(0, 0, 0, 0.25);
 }
 
-#infoRight {
+.infoRight {
     -moz-user-select: auto;
     -webkit-user-select: auto;
     user-select: auto;
@@ -523,3 +536,6 @@ a {
     border: 1vw;
 }
 
+#ticketInfoRight{
+    height: 60%;
+}
